# fieldOS

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  Makefile  PLAN.md  README.md  STATUS.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
arsenal-kernel/: Cargo.toml  linker.ld
arsenal-kernel/src/: acpi.rs  apic.rs  cpu.rs  display.rs  fb.rs  fb_font.rs  frames.rs  gdt.rs  heap.rs  idt.rs  ioapic.rs  irq.rs  kbd.rs  linuxkpi_bridge.rs  main.rs  net.rs  nvme.rs  paging.rs  pci.rs  rand.rs  sched.rs  serial.rs  shell.rs  smp.rs  task.rs  virtio.rs  virtio_blk.rs  virtio_gpu.rs  virtio_net.rs  xhci.rs
boot/: limine.conf
ci/: qemu-smoke.sh
docs/: naming.md
docs/adrs/: 0000-template.md  0001-holyc-graft.md  0002-holyc-xmm.md  0003-x86c-untouched-corpus-driven-encoder.md  0004-arsenal-pivot.md  0005-linuxkpi-shim-layout.md  0006-linuxkpi-headers-are-shim.md  0007-struct-page-thin-handle.md  0008-module-init-by-symbol-name.md  0009-xhci-native-rust.md  0010-amdgpu-kms-scope.md  0011-deferred-work-cooperative-runner.md
docs/audits/: 2026-06-amdgpu-kms-closure-audit.md
docs/devlogs/: 2026-04-m0.md  2026-05-arsenal-first-boot.md  2026-05-arsenal-framebuffer.md  2026-05-arsenal-gpl-boundary.md  2026-05-arsenal-linuxkpi-shim.md  2026-05-arsenal-mm-complete.md  2026-05-arsenal-network.md  2026-05-arsenal-nvme.md  2026-05-arsenal-paging.md  2026-05-arsenal-pivot.md  2026-05-arsenal-preemption.md  2026-05-arsenal-prompt.md  2026-05-arsenal-scheduler.md  2026-05-arsenal-smp.md  2026-05-arsenal-virtio-balloon.md  2026-05-arsenal-virtio.md  2026-05-m1.md  2026-05-m2.md  2026-05-m3-step5.md  2026-05-m3b.md  2026-06-arsenal-virtio-gpu.md  2026-06-arsenal-xhci.md
docs/legacy/: README.md  brief.md
docs/plan/: ARSENAL.md  phase-1.md  phase-2.md  phase-3.md
docs/plan/legacy/: README.md  phase-0.md
docs/skills/legacy/: README.md  holyc-lang-audit.md
holyc/: .gitignore  VERSION  holyc.mk
holyc/tests/corpus/: Bug_171.s
holyc/tools/: dump-asm.c
kernel/: kernel.mk  main.c
kernel/arch/x86_64/: cpu.c  cpu.h  exceptions.S  font_8x8.c  font_8x8.h  framebuffer.c  framebuffer.h  gdt.c  gdt.h  gdt_load.S  idt.c  idt.h  io.h  linker.ld  serial.c  serial.h
kernel/holyc/: abi.h  abi_table.c  abi_table.h  asm.c  asm.h  asm_test.c  eval.c  eval.h  holyc-kernel.mk  jit.c  jit.h  math_shim.c  repl.c  repl.h  runtime.c  runtime.h  walker.c  walker.h
kernel/holyc/include/: assert.h  ctype.h  errno.h  fcntl.h  math.h  pwd.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
kernel/holyc/include/sys/: time.h  types.h
kernel/lib/: format.c  format.h  setjmp.S  setjmp.h
kernel/mm/: pmm.c  pmm.h  slab.c  slab.h  vmm.c  vmm.h
linuxkpi/: Cargo.toml  build.rs
linuxkpi/csrc/: smoke.c
linuxkpi/include/: shim_c.h
linuxkpi/include/linux/: balloon_compaction.h  delay.h  mm.h  module.h  oom.h  page_reporting.h  slab.h  swap.h  types.h  virtio.h  virtio_config.h  wait.h  workqueue.h
linuxkpi/src/: bitops.rs  dma.rs  err.rs  irq.rs  lib.rs  list.rs  locks.rs  log.rs  macros.rs  mm.rs  page.rs  pci.rs  slab.rs  time.rs  types.rs  userspace.rs  virtio.rs  workqueue.rs
scripts/: vendor-balloon.sh
tools/: build-toolchain.sh  count-loc.sh  fetch-toolchain.sh  qemu-run.sh  toolchain.mk
xtask/: Cargo.toml
xtask/src/: main.rs
