[package]
name = "arsenal-kernel"
version = "0.0.0"
edition = "2024"
license = "BSD-2-Clause"
publish = false

[[bin]]
name = "arsenal-kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
limine = "0.5"
linked_list_allocator = "0.10"
spin = "0.10"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
