[package]
name = "arsenal-kernel"
version = "0.0.0"
edition = "2024"
license = "BSD-2-Clause"
publish = false

[[bin]]
name = "arsenal-kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# linuxkpi: M1 step 2 shim crate. Workspace member at peer level
# (ADR-0005). At M1-2-1 the shim's foundational surface (printk +
# slab + locks + atomics) is consumed by main.rs's self-test; later
# sub-blocks grow the surface and the kernel's call sites.
linuxkpi = { path = "../linuxkpi" }
limine = "0.5"
linked_list_allocator = "0.10"
# smoltcp 0.12 in no_std + alloc mode. Default features pull in std + log;
# we want neither. License: MIT OR Apache-2.0 — clear under CLAUDE.md §3.
# 3D-1 builds the phy::Device adapter on virtio-net; 3D-2 brings up the
# Interface; 3D-3 / 3D-4 wire TCP and TLS.
smoltcp = { version = "0.12", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-tcp", "socket-dhcpv4", "alloc"] }
spin = "0.10"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
# rustls 0.23 in no_std + alloc mode for 3D-4's TLS 1.3 smoke. License:
# Apache-2.0 OR ISC OR MIT — clear under CLAUDE.md §3. Defaults pull
# aws-lc-rs (links libcrypto, not no_std) and std; we want neither.
# `custom-provider` is the feature flag that says "I bring my own
# CryptoProvider"; tls12 is enabled by smoltcp's smoke target choice.
rustls = { version = "0.23", default-features = false, features = ["tls12"] }
# Pure-Rust crypto provider for rustls. License: MIT OR Apache-2.0.
# 0.0.2-alpha is pre-release; the handoff acknowledged this is the
# cleanest no_std fit for a smoke. ring's no_std story is incomplete;
# aws-lc-rs needs libcrypto-rs; rolling our own from RustCrypto is
# more surface than this one crate captures.
rustls-rustcrypto = { version = "0.0.2-alpha", default-features = false, features = ["alloc", "tls12"] }
# getrandom is pulled by rustls-rustcrypto twice: 0.4 directly and 0.2
# transitively (via the older RustCrypto rc.N crates). On x86_64-
# unknown-none there's no system RNG; both versions need custom
# backends. 0.4 dispatches via --cfg getrandom_backend="custom" set in
# .cargo/config.toml and an extern Rust fn we define. 0.2 dispatches
# via the `custom` feature flag enabled here and a register_custom_
# getrandom! macro invocation in src/rand.rs.
getrandom = { version = "0.4", default-features = false }
getrandom02 = { package = "getrandom", version = "0.2", default-features = false, features = ["custom"] }
