[package]
name = "linuxkpi"
version = "0.0.0"
edition = "2024"
license = "BSD-2-Clause"
publish = false

# LinuxKPI shim — Rust adapters presenting a Linux-kernel-shaped API
# surface to inherited Linux 6.12 LTS drivers vendored under
# vendor/linux-6.12/. Structural layout + GPL/BSD-2 boundary
# discipline: docs/adrs/0005-linuxkpi-shim-layout.md.
#
# At M1-2-0 the crate is an empty no_std skeleton — `cargo check`
# accepts it but no shim API surface exists yet. The foundational
# surface (printk, slab, locks, atomics) lands at M1-2-1; the
# PCI / IRQ / DMA bridge at M1-2-2; the virtio bus adapter at
# M1-2-3; the cc-driven build of inherited C at M1-2-4; the
# first inherited driver (virtio-balloon) coming online at M1-2-5.

[lib]
name = "linuxkpi"
path = "src/lib.rs"
test = false
bench = false

[build-dependencies]
# cc 1.0 — kept for compiler-detection / cross-target flag
# discovery / CFLAGS_* env-var plumbing for the day a future
# host distro lands the cc-friendly fix. M1-2-4 ended up
# bypassing cc::Build's compile() pipeline — see build.rs head
# comment for the macOS ar/ranlib reasoning. License:
# MIT/Apache-2.0 — clear under CLAUDE.md §3.
cc = "1.0"
# ar 0.9 — pure-Rust GNU-format archive writer. Used because
# macOS's system `ar`/`ranlib` are Mach-O-only and Apple's
# Xcode toolchain doesn't ship `llvm-ar` under that name.
# License: MIT/Apache-2.0 — clear under CLAUDE.md §3.
ar = "0.9"

[dependencies]
# spin 0.10 — same version arsenal-kernel uses; the shim's
# Mutex / Spinlock wrap spin::Mutex<()> to match the kernel's
# locking discipline (see locks.rs). License: MIT — clear under
# CLAUDE.md §3.
spin = "0.10"
# x86_64 0.15 — same version arsenal-kernel uses. M1-2-2 IRQ
# bridge needs `InterruptStackFrame` for the dispatcher pool's
# `extern "x86-interrupt" fn` signatures so they match what
# arsenal-kernel's `idt::register_vector` expects.
# License: MIT/Apache-2.0 — clear under CLAUDE.md §3.
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
